# taxi-prediction

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  april_reduced.csv  data_describe.json  main.ipynb  main.py  map.html  monthly_demand.csv  monthly_demand.json  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
data/clusters/: cluster 3.csv  cluster 9.csv  redcalt.csv
data/raw/: map.html
mlruns/0/: meta.yaml
mlruns/504015519055006746/: meta.yaml
mlruns/504015519055006746/00e397ace8be431d8e6f09e11b81daba/: meta.yaml
mlruns/504015519055006746/054858b3a3224de698b91d94d71a6a87/: meta.yaml
mlruns/504015519055006746/055d7fc2a329412ba07f653926d7cb6d/: meta.yaml
mlruns/504015519055006746/0dde5112ce064f01ac064b463dee67fb/: meta.yaml
mlruns/504015519055006746/0e7bf159dd924ec299485a4185295857/: meta.yaml
mlruns/504015519055006746/122db9a3ea1f4ed3b3f061db5cbf86d1/: meta.yaml
mlruns/504015519055006746/12987c52427040a495c390009503ed3a/: meta.yaml
models/: lgb_rergressor.joblib  random_forest_regression.joblib  regression.joblib  xgb_regression.joblib
models/scalers/: Base.joblib  Day.joblib  Hour.joblib  Lat.joblib  Lon.joblib  Minute.joblib  Month.joblib  Year.joblib  hour_cos.joblib  hour_rbf.joblib  hour_sin.joblib  minute_cos.joblib  minute_sin.joblib  month_rbf.joblib
src/: code.py
tests/: Mse.json  Mse_r.json  chscore.txt  dbscore.txt  errors.json
tests/backup/: Mse.json  Mse_lgb.json  Mse_randf.json  Mse_xgbr.json  acc_score.json
tests/regression/: Mse.json  Mse_lgb.json  Mse_randf.json  Mse_xgbr.json  acc_score.json
(+110 files in other folders)
