[project]
name = "modelengineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "feature-engine>=1.8.3",
    "folium>=0.19.5",
    "jupyter-ruff>=0.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pip>=25.1",
    "polars>=1.24.0",
    "pyqt6>=6.8.1",
    "pyright>=1.1.399",
    "ruff>=0.11.7",
    "scikit-learn>=1.6.1",
    "scikit-lego>=0.9.4",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
    "xgboost-cpu>=3.0.0",
]
